src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/C4A64.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram C4A64 {
	class A {
		/ String a;
		derived String b;
	}
}