src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/CD4AC3010.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram CD4AC3010 {
	enum A {
		E;
		public void m();
	}
	enum B {
		E;
		public void m(String a);
		public String m2(String a, int b);
	}
}